--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive layout</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
   <body>
+    <header>
+        <div class="container-main clearfix">
+           <div><img src="assets/img/logo.png" alt="logo"></div>
+           <div class="burgher"><i class="fa-solid fa-bars"></i></div>
+           <ul class="nav-list clearfix">
+              <li>Planning</li>
+              <li>Testimonial</li>
+              <li>Features</li>
+              <li>About Us</li>
+              <li><button>Get Start</button></li>
+           </ul>
+        </div>
+    </header>
     
+    <main>
+        
+    </main>
   </body>
 </html>
