--- a/index.html
+++ b/index.html
@@ -1,30 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive layout</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
   <body>
     <header>
-        <div class="container-main clearfix">
-           <div><img src="assets/img/logo.png" alt="logo"></div>
-           <div class="burgher"><i class="fa-solid fa-bars"></i></div>
-           <ul class="nav-list clearfix">
-              <li>Planning</li>
-              <li>Testimonial</li>
-              <li>Features</li>
-              <li>About Us</li>
-              <li><button>Get Start</button></li>
-           </ul>
-        </div>
+      <div class="container-main clearfix">
+        <div><img src="assets/img/logo.png" alt="logo" /></div>
+        <div class="burgher"><i class="fa-solid fa-bars"></i></div>
+        <ul class="nav-list clearfix">
+          <li>Planning</li>
+          <li>Testimonial</li>
+          <li>Features</li>
+          <li>About Us</li>
+          <li><button>Get Start</button></li>
+        </ul>
+      </div>
     </header>
-    
+
     <main>
-        
+      <div class="container-main">
+        <div class="first-row">
+          <div class="card-img first-card-row">
+            <div class="info-item-first-image">
+              <h3>Get a demo application</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                odit eveniet hic assumenda, quod totam facere atque quibusdam
+                dolore voluptatibus.
+              </p>
+              <button><i class="fa-brands fa-apple"></i>App Store</button>
+            </div>
+            <div class="img-appstore">
+              <img src="assets/img/phone.png" alt="" />
+            </div>
+          </div>
+
+          <div class="card-img little-card second-card-row">
+            <div><i class="fa-solid fa-file-code"></i></div>
+            <h3>Clean code</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet odit
+              eveniet hic assumenda, quod totam facere atque quibusdam dolore
+              voluptatibus.
+            </p>
+          </div>
+        </div>
+
+        <div class="second-row">
+          <div class="card-img little-card second-card-row">
+            <div><i class="fa-solid fa-compass-drafting"></i></div>
+            <h3>Web Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet odit
+              eveniet hic assumenda, quod totam facere atque quibusdam dolore
+              voluptatibus.
+            </p>
+          </div>
+
+          <div class="card-img little-card second-card-row">
+            <div><i class="fa-solid fa-laptop-code"></i></div>
+            <h3>Developement</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet odit
+              eveniet hic assumenda, quod totam facere atque quibusdam dolore
+              voluptatibus.
+            </p>
+          </div>
+
+          <div class="card-img little-card second-card-row">
+            <div><i class="fa-solid fa-bullhorn"></i></div>
+            <h3>Branding</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet odit
+              eveniet hic assumenda, quod totam facere atque quibusdam dolore
+              voluptatibus.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
