fine seconda parte main

--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
           </div>
         </div>
       </div>
+
+      <!-- FINE PRIMA PARTE -->
+
+      <section style="background-color: rgb(149,147,230); padding-bottom: 40px;">
+        <div class="container-main planning">
+             <div class="strategic-planning">
+                <div class="align-center"><img src="assets/img/planning1.png" alt=""></div>
+                <h2>Strategic Planning</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit rerum fugit in officiis fugiat numquam debitis quibusdam assumenda, totam, ratione temporibus veniam, eaque cum quas atque praesentium sapiente ab voluptates!</p>
+             </div>
+             <div class="app-developement align-center">
+                <img src="assets/img/planning2.png" alt="">
+                <h3>App Developement</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci at, dolores quam eveniet aspernatur expedita optio temporibus.</p>
+                <div class="download-button"><i class="fa-solid fa-arrow-down"></i></div>
+             </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
