--- a/index.html
+++ b/index.html
@@ -93,19 +93,53 @@
 
       <!-- FINE PRIMA PARTE -->
 
-      <section style="background-color: rgb(149,147,230); padding-bottom: 40px;">
+      <section
+        style="background-color: rgb(149, 147, 230); padding-bottom: 40px"
+      >
         <div class="container-main planning">
-             <div class="strategic-planning">
-                <div class="align-center"><img src="assets/img/planning1.png" alt=""></div>
-                <h2>Strategic Planning</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit rerum fugit in officiis fugiat numquam debitis quibusdam assumenda, totam, ratione temporibus veniam, eaque cum quas atque praesentium sapiente ab voluptates!</p>
-             </div>
-             <div class="app-developement align-center">
-                <img src="assets/img/planning2.png" alt="">
-                <h3>App Developement</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci at, dolores quam eveniet aspernatur expedita optio temporibus.</p>
-                <div class="download-button"><i class="fa-solid fa-arrow-down"></i></div>
-             </div>
+          <div class="strategic-planning">
+            <div class="align-center">
+              <img src="assets/img/planning1.png" alt="" />
+            </div>
+            <h2>Strategic Planning</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              rerum fugit in officiis fugiat numquam debitis quibusdam
+              assumenda, totam, ratione temporibus veniam, eaque cum quas atque
+              praesentium sapiente ab voluptates!
+            </p>
+          </div>
+          <div class="app-developement align-center">
+            <img src="assets/img/planning2.png" alt="" />
+            <h3>App Developement</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              at, dolores quam eveniet aspernatur expedita optio temporibus.
+            </p>
+            <div class="download-button">
+              <i class="fa-solid fa-arrow-down"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container-main align-center testimonials">
+          <div class="empty-card-testimonials">
+            <span>TESTIMONIALS</span>
+            <h2>We are committed expert partners</h2>
+            <p>
+              We place huge value on strong relationship and have seen the
+              benefit they bring to our business. Customers feedback is vital in
+              helping us to get it right.
+            </p>
+          </div>
+
+          <div class="card-testimonials">
+            <div class="testimonials-img"><img src="assets/img/testimonial1.jpg" alt=""></div>
+            <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, ad soluta alias, sint enim accusantium perferendis vitae beatae vero molestiae repellat doloremque!<i class="fa-solid fa-quote-right"></i></p>
+            <h4>NAT REYNOLDS</h4>
+          </div>
         </div>
       </section>
     </main>
