--- a/index.html
+++ b/index.html
@@ -136,9 +136,48 @@
           </div>
 
           <div class="card-testimonials">
-            <div class="testimonials-img"><img src="assets/img/testimonial1.jpg" alt=""></div>
-            <p><i class="fa-solid fa-quote-left"></i>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, ad soluta alias, sint enim accusantium perferendis vitae beatae vero molestiae repellat doloremque!<i class="fa-solid fa-quote-right"></i></p>
-            <h4>NAT REYNOLDS</h4>
+            <div class="testimonials-img">
+              <img src="assets/img/testimonial1.jpg" alt="" />
+            </div>
+            <div class="testimonials-info">
+              <p>
+                <i class="fa-solid fa-quote-left"></i>Lorem ipsum, dolor sit
+                amet consectetur adipisicing elit. Ratione, ad soluta alias,
+                sint enim accusantium perferendis vitae beatae vero molestiae
+                repellat.<i class="fa-solid fa-quote-right"></i>
+              </p>
+              <h4>NAT REYNOLDS</h4>
+            </div>
+          </div>
+
+          <div class="card-testimonials">
+            <div class="testimonials-img">
+              <img src="assets/img/testimonial2.jpg" alt="" />
+            </div>
+            <div class="testimonials-info">
+              <p>
+                <i class="fa-solid fa-quote-left"></i>Lorem ipsum, dolor sit
+                amet consectetur adipisicing elit. Ratione, ad soluta alias,
+                sint enim accusantium perferendis vitae beatae vero molestiae
+                repellat.<i class="fa-solid fa-quote-right"></i>
+              </p>
+              <h4>CELIA ALMEDIA</h4>
+            </div>
+          </div>
+
+          <div class="card-testimonials">
+            <div class="testimonials-img">
+              <img src="assets/img/testimonial3.jpg" alt="" />
+            </div>
+            <div class="testimonials-info">
+              <p>
+                <i class="fa-solid fa-quote-left"></i>Lorem ipsum, dolor sit
+                amet consectetur adipisicing elit. Ratione, ad soluta alias,
+                sint enim accusantium perferendis vitae beatae vero molestiae
+                repellat.<i class="fa-solid fa-quote-right"></i>
+              </p>
+              <h4>BOB ROBERTS</h4>
+            </div>
           </div>
         </div>
       </section>
