benefits of working completato

--- a/index.html
+++ b/index.html
@@ -181,6 +181,79 @@
           </div>
         </div>
       </section>
+
+      <section style="background-color: rgb(149, 147, 230); padding: 10px 0">
+        <div class="container-main">
+          <h2>Benefits of working with us</h2>
+          <div class="container-benefits-card">
+            <div class="card-benefits">
+              <h2>01</h2>
+              <h3>Hight Quality</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Accusantium deleniti corrupti perferendis doloribus enim. Modi
+                delectus possimus porro.
+              </p>
+              <button>more</button>
+            </div>
+
+            <div class="card-benefits">
+              <h2>02</h2>
+              <h3>Creative Team</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Accusantium deleniti corrupti perferendis doloribus enim. Modi
+                delectus possimus porro.
+              </p>
+              <button>more</button>
+            </div>
+
+            <div class="card-benefits">
+              <h2>03</h2>
+              <h3>Amazing Results</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Accusantium deleniti corrupti perferendis doloribus enim. Modi
+                delectus possimus porro.
+              </p>
+              <button>more</button>
+            </div>
+
+            <div class="card-benefits">
+              <h2>04</h2>
+              <h3>Best Pricing</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Accusantium deleniti corrupti perferendis doloribus enim. Modi
+                delectus possimus porro.
+              </p>
+              <button>more</button>
+            </div>
+
+            <div class="card-benefits">
+              <h2>05</h2>
+              <h3>Innovations</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Accusantium deleniti corrupti perferendis doloribus enim. Modi
+                delectus possimus porro.
+              </p>
+              <button>more</button>
+            </div>
+
+            <div class="card-benefits">
+              <h2>06</h2>
+              <h3>24/7 Support</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Accusantium deleniti corrupti perferendis doloribus enim. Modi
+                delectus possimus porro.
+              </p>
+              <button>more</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
