--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive layout</title>
@@ -127,7 +127,7 @@
         <div class="container-main align-center testimonials">
           <div class="empty-card-testimonials">
             <span>TESTIMONIALS</span>
-            <h2>We are committed expert partners</h2>
+            <h2 class="main-color">We are committed expert partners</h2>
             <p>
               We place huge value on strong relationship and have seen the
               benefit they bring to our business. Customers feedback is vital in
@@ -187,8 +187,8 @@
           <h2>Benefits of working with us</h2>
           <div class="container-benefits-card">
             <div class="card-benefits">
-              <h2>01</h2>
-              <h3>Hight Quality</h3>
+              <h2 class="main-color">01</h2>
+              <h3 class="main-color">Hight Quality</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Accusantium deleniti corrupti perferendis doloribus enim. Modi
@@ -198,8 +198,8 @@
             </div>
 
             <div class="card-benefits">
-              <h2>02</h2>
-              <h3>Creative Team</h3>
+              <h2 class="main-color">02</h2>
+              <h3 class="main-color">Creative Team</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Accusantium deleniti corrupti perferendis doloribus enim. Modi
@@ -209,8 +209,8 @@
             </div>
 
             <div class="card-benefits">
-              <h2>03</h2>
-              <h3>Amazing Results</h3>
+              <h2 class="main-color">03</h2>
+              <h3 class="main-color">Amazing Results</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Accusantium deleniti corrupti perferendis doloribus enim. Modi
@@ -220,8 +220,8 @@
             </div>
 
             <div class="card-benefits">
-              <h2>04</h2>
-              <h3>Best Pricing</h3>
+              <h2 class="main-color">04</h2>
+              <h3 class="main-color">Best Pricing</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Accusantium deleniti corrupti perferendis doloribus enim. Modi
@@ -231,8 +231,8 @@
             </div>
 
             <div class="card-benefits">
-              <h2>05</h2>
-              <h3>Innovations</h3>
+              <h2 class="main-color">05</h2>
+              <h3 class="main-color">Innovations</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Accusantium deleniti corrupti perferendis doloribus enim. Modi
@@ -242,8 +242,8 @@
             </div>
 
             <div class="card-benefits">
-              <h2>06</h2>
-              <h3>24/7 Support</h3>
+              <h2 class="main-color">06</h2>
+              <h3 class="main-color">24/7 Support</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Accusantium deleniti corrupti perferendis doloribus enim. Modi
@@ -254,6 +254,69 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <div class="container-main about-us-flex">
+          <div class="about-us-p">
+            <h2 class="main-color">About Us</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+              consequuntur impedit velit mollitia fugit modi nisi tenetur minima
+              ipsum aspernatur corrupti nesciunt eos tempore nemo, deleniti,
+              culpa tempora ullam deserunt.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+              sequi libero quidem dignissimos ex Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Blanditiis ipsa, quidem nostrum
+              adipisci maxime velit quia beatae ullam consectetur dolorum quae
+              non iusto magni repellendus tenetur optio incidunt omnis
+              obcaecati!
+            </p>
+          </div>
+          <div class="about-us-img">
+            <div class="img-aboutus">
+              <img src="assets/img/about.jpg" alt="" />
+              <i class="fa-solid fa-quote-left main-color"></i>
+            </div>
+            <h4 class="main-color">
+              I help companies tincidunt tortor aliquam nulla facilisi cras
+              fermentum odio.
+            </h4>
+            <button>
+              <i class="fa-brands fa-linkedin"></i>Find me on Linkedin
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer style="background-color: rgb(31, 95, 231)">
+      <div class="container-footer">
+        <h5>GET STARTED</h5>
+        <h3>Simple, Transparent Pricing</h3>
+        <h2>It's Free!</h2>
+        <p>
+          We're still in bete and we will be for awhile. As we add more
+          functionality, we'll look into other plans with more controls.
+        </p>
+        <button>Get Started</button>
+        <div>
+          Copyright 2021 Boolean - Classe XX -
+          <span style="text-decoration: underline">Privacy policy</span>
+        </div>
+      </div>
+
+      <div style="background-color: rgb(36, 34, 34)">
+        <div class="container-footer">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati
+            ratione labore non, soluta quo animi voluptatibus commodi alias.
+          </p>
+
+          <div><a href="www.google.com">Lorem ipsum  </a>sclerisque mauris pallentesque<a href="www.google.com">  Boolean careers</a></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
